adding media queries and animation

--- a/survey.html
+++ b/survey.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="survey.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>FCC - Survey Form</title>
@@ -14,49 +16,79 @@
         <p id="description">Tell us your thoughts so far on learning to code</p>
     </header>
     <main>
-        <div class="container">
-            <form action="" id="survey-form">
-                <div class="text-input">
-                    <label for="name" id="name-label" class="label-text">Name:</label>
-                    <input type="text" id="name" class="input-box" name="name" required placeholder="Name">
-                </div>
-                <div class="text-input">
-                    <label for="email" id="email-label">Email:</label>
-                    <input type="email" id="email" class="input-box" name="email" required placeholder="Email">
-                </div>
-                <div class="text-input">
-                    <label for="age" id="number-label">Age:</label>
-                    <input type="number" id="number" class="input-box" name="age" min="13" max="100" placeholder="Age">
-                </div>
-                <select name="dropdown" id="dropdown">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="2">3</option>
-                </select>
-                <label for="r1">R1
-                    <input type="radio" id="r1" name="radio">
-                </label>
-                <label for="r2">R2
-                    <input type="radio" id="r2" name="radio">
-                </label>
-                <label for="r3">R3
-                    <input type="radio" id="r3" name="radio">
-                </label>
-                <label for="check1">C1
-                    <input type="checkbox" value="1" id="check1" name="check">
-                </label>
-                <label for="check2">C2
-                    <input type="checkbox" value="2" id="check2" name="check">
-                </label>
-                <label for="check3">C3
-                    <input type="checkbox" value="3" name="check" id="check3">
-                </label>
-                <label for="check4">C4
-                    <input type="checkbox" value="4" name="check" id="check4">
-                </label>
-                <textarea name="extra" id="extra" cols="30" rows="10"></textarea>
-                <button id="submit">Submit</button>
-            </form>
+        <div class="container animated fadeInUp">
+            <div class="wrapper">
+                <form action="" id="survey-form">
+                    <div class="text-input">
+                        <label for="name" id="name-label">Name:</label>
+                        <input type="text" id="name" name="name" class="input-box" required placeholder="Name">
+                    </div>
+                    <div class="text-input">
+                        <label for="email" id="email-label">Email:</label>
+                        <input type="email" id="email" name="email" class="input-box" required placeholder="Email">
+                    </div>
+                    <div class="text-input">
+                        <label for="age" id="number-label">Age:</label>
+                        <input type="number" id="number" name="age" class="input-box" min="13" max="100" placeholder="Age">
+                    </div>
+                    <div class="selection">
+                        <p class="center">
+                            What has been your favorite section so far?
+                        </p>
+                        <select name="dropdown" id="dropdown">
+                            <option value="html">HTML 5</option>
+                            <option value="css">CSS</option>
+                            <option value="flexbox">Flexbox</option>
+                            <option value="grid">Grid</option>
+                        </select>
+                    </div>
+                    <div class="radios">
+                        <p class="center">
+                            What section are you looking forward to the most?
+                        </p>
+                        <label for="bootstrap">
+                            <input type="radio" id="bootstrap"  name="radio"> Bootstrap
+                        </label>
+                        <label for="javascript">
+                            <input type="radio" id="javascript" name="radio"> Javascript
+                        </label>
+                        <label for="react">
+                            <input type="radio" id="react" name="radio"> React
+                        </label>
+                        <label for="node">
+                            <input type="radio" id="node" name="radio"> Node
+                        </label>
+                    </div>
+                    <div class="checks">
+                        <p class="center">
+                            What technology field(s) are you interested in?
+                        </p>
+                        <label for="check1">
+                            <input type="checkbox" value="Data Science" id="check1" name="check">
+                            Data Science
+                        </label>
+                        <label for="check2">
+                            <input type="checkbox" value="Full Stack" id="check2" name="check">
+                            Full Stack Development
+                        </label>
+                        <label for="check3">
+                            <input type="checkbox" value="Front-End" name="check" id="check3">
+                            Front End Development
+                        </label>
+                        <label for="check4">
+                            <input type="checkbox" value="Back-End" name="check" id="check4">
+                            Back End Development
+                        </label>
+                    </div>
+                    <div class="message">
+                        <p class="center">
+                            Tell us some more about yourself
+                        </p>
+                        <textarea name="extra" id="extra" cols="30" rows="10"></textarea>
+                    </div>
+                    <button id="submit">Submit</button>
+                </form>
+            </div>
         </div>
     </main>
 </body>
