adding values to all radio buttons

--- a/survey.html
+++ b/survey.html
@@ -7,7 +7,6 @@
     <!-- Animate CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="survey.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>FCC - Survey Form</title>
 </head>
 <body>
@@ -47,16 +46,16 @@
                             What section are you looking forward to the most?
                         </p>
                         <label for="bootstrap">
-                            <input type="radio" id="bootstrap"  name="radio"> Bootstrap
+                            <input type="radio" id="bootstrap"  name="radio" value="bootstrap"> Bootstrap
                         </label>
                         <label for="javascript">
-                            <input type="radio" id="javascript" name="radio"> Javascript
+                            <input type="radio" id="javascript" name="radio" value="javascript"> Javascript
                         </label>
                         <label for="react">
-                            <input type="radio" id="react" name="radio"> React
+                            <input type="radio" id="react" name="radio" value="react"> React
                         </label>
                         <label for="node">
-                            <input type="radio" id="node" name="radio"> Node
+                            <input type="radio" id="node" name="radio" value="node"> Node
                         </label>
                     </div>
                     <div class="checks">
